--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/fawezz/mobile-project-nodeJs#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "otp-generator": "^4.0.0"
   }
 }
