--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "nodemailer": "^6.8.0",
-    "otp-generator": "^4.0.0"
+    "otp-generator": "^4.0.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0"
   }
 }
