--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
-    "otp-generator": "^4.0.0"
+    "otp-generator": "^4.0.0",
+    "sharp": "^0.31.2"
   }
 }
