--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "otp-generator": "^4.0.0",
-    "sharp": "^0.31.2"
+    "sharp": "^0.31.2",
+    "socket.io": "^4.5.4"
   }
 }
